templates/gpfs-cli.template.yaml
---

### DEPLOYMENT ###
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: %%%PODNAME%%%
  namespace: %%%NAMESPACE%%%
  labels:
    app: gpfs-cli%%%NUMBER%%%
    role: gpfs-cli
spec:
  selector:
    matchLabels:
      app: gpfs-cli%%%NUMBER%%%
      role: gpfs-cli
  serviceName: &name gpfs-cli%%%NUMBER%%%
  replicas: 1
  template:
    metadata:
      name: &name gpfs-cli%%%NUMBER%%%
      labels:
        app: *name
        role: gpfs-cli
      annotations:
        "cni.projectcalico.org/ipAddrs": "[\"%%%POD_IP%%%\"]"
    spec:
      volumes:
      - name: init-container
        configMap:
          name: init-container
          defaultMode: 0755
      - name: installdir
        hostPath:
          path: /home/%%%USER%%%
      - name: hostsfile
        hostPath:
          path: /root/cli%%%NUMBER%%%-%%%NAMESPACE%%%/hosts
      - name: gendir
        hostPath:
          path: /root/cli%%%NUMBER%%%-%%%NAMESPACE%%%/var_mmfs
      - name: etcsshdir
        hostPath:
          path: /root/cli%%%NUMBER%%%-%%%NAMESPACE%%%/etc_ssh
      - name: rootsshdir
        hostPath:
          path: /root/cli%%%NUMBER%%%-%%%NAMESPACE%%%/root_ssh
      - name: application-indigo
        configMap:
          name: application-indigo
          defaultMode: 0644
      - name: storage-area
        configMap:
          name: storage-area
          defaultMode: 0644
      - name: certs-volume
        secret:
          secretName: tls-ssl-storm-webdav-%%%NUMBER%%%
          items:
          - key: tls.crt
            path: tls.crt
          - key: tls.key
            path: tls.key
      - name: trust
        emptyDir: {}
      hostNetwork: false
      nodeName: %%%NODENAME%%%
      containers:
      - name: %%%PODNAME%%%
        image: %%%IMAGE_REPO%%%:%%%IMAGE_TAG%%%
        imagePullPolicy: Always
        securityContext:
          privileged: true
        readinessProbe:
          tcpSocket:
            port: 22
          initialDelaySeconds: 5
          periodSeconds: 10
        command: [sh, -c]
        args:
        - update-ca-trust &&
          rpm --import https://dist.eugridpma.info/distribution/igtf/current/GPG-KEY-EUGridPMA-RPM-3 &&
          curl https://raw.githubusercontent.com/indigo-iam/egi-trust-anchors-container/main/EGI-trustanchors.repo -o /etc/yum.repos.d/ca.repo &&
          microdnf install -y ca-policy-egi-core &&
          /scripts/init-container.sh
        volumeMounts:
        - name: certs-volume
          mountPath: /tmp/.storm-webdav/certs
        - mountPath: /etc/pki/ca-trust/source/anchors
          name: trust
          readOnly: true
        - name: application-indigo
          mountPath: /etc/storm/webdav/config/application-indigo.yml
          subPath: application-indigo.yml
        - name: storage-area
          mountPath: /etc/storm/webdav/sa.d/sa.properties
          subPath: sa.properties
        - name: init-container
          mountPath: /scripts/init-container.sh
          subPath: init-container.sh
        - name: installdir
          mountPath: /usr/lpp
        - name: hostsfile
          mountPath: /etc/hosts
        - name: gendir
          mountPath: /var/mmfs
        - name: etcsshdir
          mountPath: /root/ssh
        - name: rootsshdir
          mountPath: /root/.ssh
