templates/gpfs-mgr.template.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: %%%PODNAME%%%
  namespace: %%%NAMESPACE%%%
  labels:
    app: gpfs-mgr%%%NUMBER%%%
    role: gpfs-mgr
spec:
  selector:
    matchLabels:
      app: gpfs-mgr%%%NUMBER%%%
      role: gpfs-mgr
  serviceName: &name gpfs-mgr%%%NUMBER%%%
  replicas: 1
  template:
    metadata:
      name: &name gpfs-mgr%%%NUMBER%%%
      labels:
        app: *name
        role: gpfs-mgr
      annotations:
        "cni.projectcalico.org/ipAddrs": "[\"%%%POD_IP%%%\"]"
    spec:
      hostNetwork: false
      nodeName: %%%NODENAME%%%
      containers:
      - name: %%%PODNAME%%%
        image: %%%IMAGE_REPO%%%:%%%IMAGE_TAG%%%
        command: [ "/bin/bash", "-c", "--" ]
        args: [ "./scripts/init-container.sh" ]
        securityContext:
          privileged: true
        readinessProbe:
          tcpSocket:
            port: 22
          initialDelaySeconds: 5
          periodSeconds: 10
        volumeMounts:
          - name: init-container
            mountPath: /scripts/init-container.sh
            subPath: init-container.sh
          - name: node-list
            mountPath: /root/node.list
            subPath: node.list
          - name: installdir
            mountPath: /usr/lpp/mmfs
          - name: hostsfile
            mountPath: /etc/hosts
          - name: gendir
            mountPath: /var/mmfs
          - name: etcsshdir
            mountPath: /root/ssh
          - name: rootsshdir
            mountPath: /root/.ssh
      volumes:
      - name: init-container
        configMap:
          name: init-container
          defaultMode: 0755
      - name: node-list
        configMap:
          name: node-list
          defaultMode: 0644
      - name: installdir
        hostPath:
          path: /home/core
      - name: hostsfile
        hostPath:
          path: /root/mgr%%%NUMBER%%%/hosts
      - name: gendir
        hostPath:
          path: /root/mgr%%%NUMBER%%%/var_mmfs
      - name: etcsshdir
        hostPath:
          path: /root/mgr%%%NUMBER%%%/etc_ssh
      - name: rootsshdir
        hostPath:
          path: /root/mgr%%%NUMBER%%%/root_ssh
