templates/gpfs-mgr-svc.template.yaml
apiVersion: v1
kind: Service
metadata:
  name: &name %%%CLUSTER_NAME%%%-mgr%%%NUMBER%%%
  namespace: %%%NAMESPACE%%%
spec:
  selector:
    app: *name
  ports:
  - name: gpfs-svc
    protocol: TCP
    port: 1191
    targetPort: 1191
  - name: gpfs-ssh
    protocol: TCP
    port: 22
    targetPort: 22
  - name: gpfs-collec1
    protocol: TCP
    port: 4739
    targetPort: 4739
  - name: gpfs-collec2
    protocol: TCP
    port: 9085
    targetPort: 9085
  - name: gpfs-sysmon
    protocol: TCP
    port: 9980
    targetPort: 9980
  - name: gpfs-exporter
    protocol: TCP
    port: 9303
    targetPort: 9303
