templates/gui-svc.template.yaml
apiVersion: v1
kind: Service
metadata:
  name: gpfs-gui
  namespace: %%%NAMESPACE%%%
spec:
  selector:
    svc: gpfs-gui 
  ports:
  - name: gui-http
    protocol: TCP
    port: 80
    targetPort: 80
  - name: gui-https
    protocol: TCP
    port: 443
    targetPort: 443
