templates/storm-webdav-svc.template.yaml
apiVersion: v1
kind: Service
metadata:
  name: storm-webdav
  namespace: %%%NAMESPACE%%%
spec:
  selector:
    role: gpfs-cli
  ports:
  - name: storm-webdav-https
    port: 8443
  - name: storm-webdav-http
    port: 8085
