templates/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: default
spec:
  tls:
    - hosts:
      - k8s-gpfs-grafana.novalocal # Domain name of the service
      secretName: grafana-cert # provide the aforementioned secret.
  rules:
  - host: k8s-gpfs-grafana.novalocal
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
  ingressClassName: nginx
