templates/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: default
spec:
  rules:
  - host: k8s-gpfs-prometheus.novalocal
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: prometheus-server
            port:
              number: 80
  ingressClassName: nginx
