templates/storm-webdav-ingress.template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storm-webdav-ingress
  namespace: %%%NAMESPACE%%%
  annotations:
    external-dns.alpha.kubernetes.io/hostname: storm-webdav.%%%DOMAIN%%%
    external-dns.alpha.kubernetes.io/target: %%%CONTROLLER_IP%%%
    cert-manager.io/cluster-issuer: %%%CLUSTER_ISSUER%%%
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
    - hosts:
      - storm-webdav.%%%DOMAIN%%%
      secretName: tls-ssl-storm-webdav-%%%NUMBER%%%
  rules:
  - host: storm-webdav.%%%DOMAIN%%%
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: storm-webdav
            port:
              number: 8443
  ingressClassName: nginx
